syntax = "proto3";

option csharp_namespace = "SnackTime.MediaServer.Service.Session";

import "proto/serssion-service/session-getAll.proto";
import "proto/serssion-service/session-upsert.proto";

package snacktime.series.session;

service Session {
    rpc GetAll (GetAllRequest) returns (GetAllResponse) {
    }
    rpc Upsert (UpsertRequest) returns (UpsertResponse) {
    }
}

